LB-1706 updated design mystorage

--- a/Depo/Depo/Presentation/UserStories/Settings/MyStorage/View/MyStorageViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/MyStorage/View/MyStorageViewController.xib
@@ -25,33 +25,63 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R22-lb-Fq7" customClass="ControlContainableScrollView" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="312" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ybg-yo-WWN">
-                            <rect key="frame" x="0.0" y="0.0" width="312" height="685.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="FSL-Bc-IHK">
-                                    <rect key="frame" x="8" y="0.0" width="296" height="685.5"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="FSL-Bc-IHK">
+                                    <rect key="frame" x="8" y="0.0" width="304" height="568"/>
                                     <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mtB-g7-qbf" userLabel="Spacing">
+                                            <rect key="frame" x="0.0" y="0.0" width="304" height="12"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="12" id="2wV-4X-hhM"/>
+                                            </constraints>
+                                        </view>
                                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sJL-4c-3eP" customClass="ResizableTableView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="296" height="228"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="304" height="0.0"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         </tableView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cQG-OZ-8DS" userLabel="CardStackView">
-                                            <rect key="frame" x="0.0" y="244" width="296" height="50"/>
+                                            <rect key="frame" x="0.0" y="12" width="304" height="50"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" id="QYd-iK-woM"/>
                                             </constraints>
                                         </stackView>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35h-M2-DXI" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="310" width="296" height="30"/>
-                                            <connections>
-                                                <action selector="restorePurhases" destination="-1" eventType="touchUpInside" id="37M-F3-52a"/>
-                                            </connections>
-                                        </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fLW-L5-Atv" userLabel="Spacing">
+                                            <rect key="frame" x="0.0" y="62" width="304" height="12"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="12" id="2eQ-5o-aVN" userLabel="height = 16"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7by-Q8-kfK" userLabel="RestoreButtonContainer">
+                                            <rect key="frame" x="0.0" y="74" width="304" height="45"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35h-M2-DXI" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
+                                                    <rect key="frame" x="16" y="0.0" width="30" height="45"/>
+                                                    <connections>
+                                                        <action selector="restorePurhases" destination="-1" eventType="touchUpInside" id="37M-F3-52a"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="35h-M2-DXI" firstAttribute="leading" secondItem="7by-Q8-kfK" secondAttribute="leading" constant="16" id="5th-Ny-1C2"/>
+                                                <constraint firstAttribute="height" constant="45" id="6VY-Vw-yaR"/>
+                                                <constraint firstAttribute="bottom" secondItem="35h-M2-DXI" secondAttribute="bottom" id="U1B-4T-fGY"/>
+                                                <constraint firstItem="35h-M2-DXI" firstAttribute="top" secondItem="7by-Q8-kfK" secondAttribute="top" id="rW4-zZ-PcF"/>
+                                                <constraint firstAttribute="trailing" secondItem="35h-M2-DXI" secondAttribute="trailing" constant="16" id="zjM-aP-ml5"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cZU-vA-Hhw" userLabel="Spacing">
+                                            <rect key="frame" x="0.0" y="119" width="304" height="12"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="12" id="J9P-Xl-gmg" userLabel="height = 16"/>
+                                            </constraints>
+                                        </view>
                                         <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="296" placeholderIntrinsicHeight="329.5" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="u5R-GY-RpU">
-                                            <rect key="frame" x="0.0" y="356" width="296" height="329.5"/>
+                                            <rect key="frame" x="0.0" y="131" width="304" height="437"/>
                                         </stackView>
                                     </subviews>
                                 </stackView>
@@ -59,7 +89,7 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="FSL-Bc-IHK" secondAttribute="bottom" id="OI0-EM-8CW"/>
-                                <constraint firstItem="FSL-Bc-IHK" firstAttribute="top" secondItem="ybg-yo-WWN" secondAttribute="top" id="Vz5-Nz-era"/>
+                                <constraint firstItem="FSL-Bc-IHK" firstAttribute="top" secondItem="ybg-yo-WWN" secondAttribute="top" id="Vz5-Nz-era" userLabel="Stack View.top = top "/>
                                 <constraint firstAttribute="trailing" secondItem="FSL-Bc-IHK" secondAttribute="trailing" constant="8" id="eCH-58-D7e"/>
                                 <constraint firstItem="FSL-Bc-IHK" firstAttribute="leading" secondItem="ybg-yo-WWN" secondAttribute="leading" constant="8" id="rXk-OA-Dze"/>
                             </constraints>
